# app/Http/Controllers/CriticController.php
@@ -18,6 +18,48 @@ class CriticController extends Controller
         $this->criticRepository = $criticRepository;
     }
 
+    /**
+     * @OA\Post(
+     *     path="/api/critics",
+     *     tags={"Critics"},
+     *     summary="Creates a critic, an user cannot do more than one per film",
+     *     description="Maximum of 60 calls per minute",
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="score",
+     *                     type="int"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="comment",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="film_id",
+     *                     type="int"
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *        response = 201,
+     *        description = "Created"),
+     *     @OA\Response(
+     *       response = 422,
+     *       description = "Invalid data"),
+     *     @OA\Response(
+     *       response = 401,
+     *       description = "Unauthorized"),
+     *     @OA\Response(
+     *       response = 403,
+     *       description = "Forbidden"),
+     *     @OA\Response(
+     *       response = 500,
+     *       description = "Server error")
+     * )
+     */
     public function create(Request $request)
     {
         try
